# test_0084

./: README.md  pyproject.toml
app/: after_key.py  cli_generator.py  cli_patcher.py  diff_report.py  excel_read.py  excel_write.py  filter_rules.py  normalizer.py  patch_io.py  patch_model.py  renumber.py  translator.py
config/: glossary.yml
sample/: OTR-MA-LQC-TEST-RevE13-20260130_E_for MR Testing_分担 (2).xlsx  test_result.html  【S社向けMRリグレッション2試験】RevE081_Master_v0.5 1 (3).xlsx
spec/: claude_code_implementation_prompt.md  claude_code_spec_english_to_patch_generator_v2.md  claude_code_spec_shikenkomoku_patcher_v2.md  spec_xts_prefilter.md
tests/: test_after_key.py  test_filter_rules.py  test_normalizer.py
